After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762710 - gst_discoverer_info_copy loses some data members of the source GstDiscovererInfo object.
gst_discoverer_info_copy loses some data members of the source GstDiscovererI...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
1.6.3
Other All
: Normal normal
: 1.6.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
1.6.4
Depends on:
Blocks:
 
 
Reported: 2016-02-26 04:03 UTC by vgdoqd
Modified: 2016-04-14 17:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Simply copy the missing data members. (343 bytes, patch)
2016-02-26 04:03 UTC, vgdoqd
needs-work Details | Review

Description vgdoqd 2016-02-26 04:03:25 UTC
Created attachment 322434 [details] [review]
Simply copy the missing data members.

The function gst_discoverer_info_copy doesn't copy the data members seekable and result of the source GstDiscovererInfo.

In the case of copying a GstDiscovererInfo for later use, the seekbale will be undefined, which in practice usually will be false, even though the seekable of the original GstDiscovererInfo is true.
Comment 1 Sebastian Dröge (slomo) 2016-02-26 07:27:39 UTC
Comment on attachment 322434 [details] [review]
Simply copy the missing data members.

Thanks for the patch, looks correct :)

Can you provide this as a "git format-patch" style patch?
Comment 2 Sebastian Dröge (slomo) 2016-02-26 10:09:30 UTC
Make sure to also properly set your mail address and name in GIT before doing that :) Thanks!
Comment 3 Tim-Philipp Müller 2016-03-10 10:19:04 UTC
vgdoqd, could you provide us with a name and e-mail address for patch attribution please?
Comment 4 Tim-Philipp Müller 2016-04-02 09:15:08 UTC
Pushed this now since it's trivial anyway:

commit 2102fdc983e13bc945c552a88c1c007f358363da
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Sat Apr 2 10:09:07 2016 +0100

    discoverer: copy over result and seekable fields when copying a discoverer info
    
    The function gst_discoverer_info_copy doesn't copy the data members seekable
    and result of the source GstDiscovererInfo.
    
    In the case of copying a GstDiscovererInfo for later use, the seekbale will be
    undefined, which in practice usually will be false, even though the seekable of
    the original GstDiscovererInfo is true.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=762710